test(controller): add TestFX UI tests